@@ -61,6 +61,9 @@ IN DEVELOPMENT
       the show_pending flag is now authoritative for showing pending
       merges, as it was originally. (Robert Collins, #225204)
 
+    * Show proper error rather than traceback when an unknown revision 
+      id is specified to ``bzr cat-revision``. (Jelmer Vernooij, #175569)
+
     * ``WorkingTree4`` trees will now correctly report missing-and-new
       paths in the output of ``iter_changes``. (Robert Collins)
 
